Update Gradle-Wrapper to v6.7.1, fix warnings in Java classes